--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 asgiref==3.6.0
 autopep8==2.0.2
+beautifulsoup4==4.12.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 dj-database-url==1.3.0
 Django==4.2
 gunicorn==20.1.0
+idna==3.4
+Pillow==9.5.0
 pycodestyle==2.10.0
 python-decouple==3.8
+python-dotenv==1.0.0
 pytz==2023.3
+requests==2.31.0
+soupsieve==2.4.1
 sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.5.0
 tzdata==2023.3
 Unipath==1.1
+urllib3==2.0.2
 whitenoise==6.4.0
