Replace setHTML with innerHTML, also modify condition in views.create_patient and change loggin level to ERROR in .env.

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ HTTP_SAFE =
 LOCAL_PORT = :8000
 ROOT_URL = http${HTTP_SAFE}://${DOMAIN}${LOCAL_PORT}
 DEBUG = true
-DJANGO_LOG_LEVEL = INFO
+DJANGO_LOG_LEVEL = ERROR
